Finished flex version.  CSS table version has vertical align issues.

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,77 @@
+* {
+	/*outline: red solid 1px;*/
+	box-sizing: border-box;
+}
 
+html, body {
+	height: 100%;
+	width: 100%;
+	margin: 0;
+}
+
+main {
+	padding: 10px 50px;
+	height: 100%;
+	width: 90%;
+	text-align: center;
+	margin: 0 auto;
+}
+
+.content {
+	width: 100%;
+	height: auto;
+
+}
+
+.intro {
+	width: 90%;
+	margin: 0 auto;
+	font-family: sans-serif;
+	line-height: 1.5;
+	font-size: 140%;
+	text-align: justify;
+}
+
+.image-wrapper {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+
+}
+
+.imageBox {
+	/*float: left;*/
+	margin: 20px 80px;
+}
+
+.imageBox a img {
+	width: 120px;
+}
+
+footer {
+	width: 100%;
+	height: 5%;
+	text-align: center;
+	font-size: 13px;
+	line-height: 1.5;
+	font-family: sans-serif;
+	clear: both;
+
+}
+
+.terms-box {
+	display: flex;
+	align-content: center;
+	align-items: center;
+	flex-direction: row;
+	justify-content: center;
+}
+
+.terms {
+	/*float: left;*/
+	text-align: center;
+	margin: 0 10px;
+}
